[gd_scene load_steps=13 format=3 uid="uid://dtrxj6enakcwr"]

[ext_resource type="Texture2D" uid="uid://dm5vtbden4hkk" path="res://graphics/projectiles/grenade.png" id="1_1mnvm"]
[ext_resource type="Script" uid="uid://nndjs0ptpeom" path="res://scenes/projectiles/grenade.gd" id="1_b7x1w"]
[ext_resource type="Texture2D" uid="uid://cw8tvkpnygjxw" path="res://graphics/explosions/explosion_3.png" id="3_3382y"]
[ext_resource type="Texture2D" uid="uid://flql2fgbgi18" path="res://graphics/lights/textures/circle.png" id="4_oqjs3"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_b7x1w"]
friction = 10.0
bounce = 0.4

[sub_resource type="CircleShape2D" id="CircleShape2D_b7x1w"]
radius = 22.0227

[sub_resource type="Animation" id="Animation_2die0"]
resource_name = "Blinking"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PointLight2D:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.725612, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [1.0, 16.0, 4.0, 16.0]
}

[sub_resource type="Animation" id="Animation_oqjs3"]
resource_name = "Explosion"
length = 2.0
step = 0.03
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Explosion:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.03, 0.06, 0.09, 0.12, 0.15, 0.18, 0.21, 0.24, 0.27, 0.3, 0.33, 0.36, 0.39, 0.42, 0.45, 0.48, 0.51, 0.54, 0.57, 0.6, 0.63, 0.66, 0.69, 0.72, 0.75, 0.78, 0.81, 0.84, 0.87, 0.9, 0.93, 0.96, 0.99, 1.02, 1.05, 1.08, 1.11, 1.14, 1.17, 1.2, 1.23, 1.26, 1.29, 1.32, 1.35, 1.38, 1.41, 1.44, 1.47, 1.5, 1.53, 1.56, 1.59, 1.62, 1.65, 1.68, 1.71, 1.74, 1.77, 1.8, 1.83, 1.86),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.454545, 1, 1.9697),
"transitions": PackedFloat32Array(1, 1, 1),
"values": [{
"args": [],
"method": &"_on_explosion_one"
}, {
"args": [],
"method": &"_on_explosion_two"
}, {
"args": [],
"method": &"queue_free"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Explosion:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.54545, 1.93939),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.0784314)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1.12121),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_u7dq4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Explosion:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PointLight2D:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Explosion:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2die0"]
_data = {
&"Blinking": SubResource("Animation_2die0"),
&"Explosion": SubResource("Animation_oqjs3"),
&"RESET": SubResource("Animation_u7dq4")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_oqjs3"]
radius = 74.108

[sub_resource type="CircleShape2D" id="CircleShape2D_u7dq4"]
radius = 117.154

[node name="Grenade" type="RigidBody2D"]
collision_layer = 8
collision_mask = 15
physics_material_override = SubResource("PhysicsMaterial_b7x1w")
gravity_scale = 0.0
linear_damp = 1.6
script = ExtResource("1_b7x1w")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_b7x1w")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.3, 0.3)
texture = ExtResource("1_1mnvm")

[node name="Explosion" type="Sprite2D" parent="."]
texture = ExtResource("3_3382y")
hframes = 8
vframes = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_2die0")
}
autoplay = "Blinking"

[node name="ExplosionTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="PointLight2D" type="PointLight2D" parent="."]
color = Color(1, 0, 0, 0.54902)
texture = ExtResource("4_oqjs3")
texture_scale = 0.07

[node name="Explosion1Area2D" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="Explosion1Area2D"]
shape = SubResource("CircleShape2D_oqjs3")

[node name="Explosion2Area2D" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="Explosion2Area2D"]
shape = SubResource("CircleShape2D_u7dq4")

[connection signal="timeout" from="ExplosionTimer" to="." method="_on_explosion_timer_timeout"]
[connection signal="body_entered" from="Explosion1Area2D" to="." method="_on_explosion_1_area_2d_body_entered"]
[connection signal="body_exited" from="Explosion1Area2D" to="." method="_on_explosion_1_area_2d_body_exited"]
[connection signal="body_entered" from="Explosion2Area2D" to="." method="_on_explosion_2_area_2d_body_entered"]
[connection signal="body_exited" from="Explosion2Area2D" to="." method="_on_explosion_2_area_2d_body_exited"]
